--- a/Translations/Deposit.g.xlf
+++ b/Translations/Deposit.g.xlf
@@ -108,6 +108,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Table TPP Deposit Entry - Field Ref. Template Name - Property Caption</note>
         </trans-unit>
+        <trans-unit id="Table 3506863876 - Field 1878130204 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Type</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Table TPP Deposit Entry - Field Type - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Table 3506863876 - Field 3220827225 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Used</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -618,11 +623,6 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension TPP Genjournal Line - Field TPP Deposit Type - Property Caption</note>
         </trans-unit>
-        <trans-unit id="TableExtension 2401793201 - Field 4166091376 - Property 62802879" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1806786327">
-          <source> ,Customer,Vendor</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TPP Genjournal Line - Field TPP Deposit Type - Property OptionCaption</note>
-        </trans-unit>
         <trans-unit id="TableExtension 2401793201 - Field 3356801597 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1806786327">
           <source>Deposit Type No.</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -643,35 +643,50 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension TPP GL Account - Field TPP Deposit - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Enum 4166091376 - EnumValue 2964504023 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Enum 837515541 - EnumValue 2964504023 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Cash Receipt</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Cash Receipt - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Document Type - EnumValue Cash Receipt - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Enum 4166091376 - EnumValue 3196174509 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Enum 837515541 - EnumValue 3196174509 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Payment Journal</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Payment Journal - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Document Type - EnumValue Payment Journal - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Enum 4166091376 - EnumValue 4042331808 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Enum 837515541 - EnumValue 4042331808 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Purchase Credit Memo</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Purchase Credit Memo - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Document Type - EnumValue Purchase Credit Memo - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Enum 4166091376 - EnumValue 2437096118 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Enum 837515541 - EnumValue 2437096118 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Purchase Invoice</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Purchase Invoice - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Document Type - EnumValue Purchase Invoice - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Enum 4166091376 - EnumValue 1708100201 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Enum 837515541 - EnumValue 1708100201 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Sales Credit Memo</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Sales Credit Memo - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Document Type - EnumValue Sales Credit Memo - Property Caption</note>
         </trans-unit>
-        <trans-unit id="Enum 4166091376 - EnumValue 4034894651 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+        <trans-unit id="Enum 837515541 - EnumValue 4034894651 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Sales Invoice</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Sales Invoice - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Document Type - EnumValue Sales Invoice - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 4166091376 - EnumValue 1371923692 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source> </source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue   - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 4166091376 - EnumValue 1994964448 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Customer</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Customer - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 4166091376 - EnumValue 1936001480 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Vendor</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum TPP Deposit Type - EnumValue Vendor - Property Caption</note>
         </trans-unit>
         <trans-unit id="EnumExtension 2064515953 - EnumValue 1610154708 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Enum 2023291264">
           <source>Deposit</source>
